--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
-[submodule "cogs/judges-mention-cog"]
-	path = cogs/judges-mention-cog
-	url = https://github.com/botcott/judges-mention-cog
-[submodule "cogs/judges-appeals-cog"]
-	path = cogs/judges-appeals-cog
-	url = https://github.com/botcott/judges-appeals-cog
-[submodule "cogs/admin-stats-cog"]
-	path = cogs/admin-stats-cog
-	url = https://github.com/botcott/admin-stats-cog
+[submodule "cogs/ds14-judges-mention-cog"]
+	path = cogs/ds14-judges-mention-cog
+	url = https://github.com/botcott/ds14-judges-mention-cog
+[submodule "cogs/ds14-judges-appeals-cog"]
+	path = cogs/ds14-judges-appeals-cog
+	url = https://github.com/botcott/ds14-judges-appeals-cog
+[submodule "cogs/ds14-admin-stats-cog"]
+	path = cogs/ds14-admin-stats-cog
+	url = https://github.com/botcott/ds14-admin-stats-cog
